fix(nav) ensure project selector is behind the logo, when the nav starts to scroll on low height screens WD-2987

--- a/src/sass/_pattern_navigation.scss
+++ b/src/sass/_pattern_navigation.scss
@@ -64,6 +64,10 @@
   }
 }
 
+.l-navigation .p-panel__header {
+  z-index: 1001;
+}
+
 .sidenav-top-ul::after {
   display: none;
 }
